--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,7 +1,19 @@
-one:
-  content: MyText
+orange:
+  content: "I just an orange!"
+  created_at: <%= 10.minutes.ago %>
   user: archer
 
-two:
-  content: MyText
+tau_manifesto:
+  content: "Check out the @tauday site by @mhartl: https://tauday.com"
+  created_at: <%= 3.years.ago %>
+  user: michael
+
+cat_video:
+  content: "Sad cats are sad: https://youtu.be/PKffm2uI4dk"
+  created_at: <%= 2.hours.ago %>
+  user: michael
+
+most_recent:
+  content: "Writing a short test"
+  created_at: <%= Time.zone.now %>
   user: michael
